--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Вэб-студия</title>
-    <!---<link rel="stylesheet" href="css/styles.css" />-->
     <style>
       body {
         margin: 0;
-        padding: 0;
+        padding: 0;      /* Обнуляем настройки браузера */
       }
       li {
         list-style-type: none; /* Убираем маркеры */
