Переводит макет страницы д/з в HTML-разметку

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
       />
 
       <h1>
-        Эффективные решения <br />
-        для вашего бизнеса
+        Эффективные решения<br/>для вашего бизнеса
       </h1>
       <!--butt-200/50-#2196F3-->
       <button type="button">Заказать услугу</button>
