--- a/index.html
+++ b/index.html
@@ -9,16 +9,53 @@
         margin: 0;
         padding: 0;      /* Обнуляем настройки браузера */
       }
+      ul.header li{
+        display: inline;
+      }
       li {
         list-style-type: none; /* Убираем маркеры */
+      }
+      .header-c{
+        height: 80px;
+        width: 1170px;              /*border: 1px solid black;*/
+      }
+      .hero{
+                                          width: 1600px;
+        height: 600px;
+        border: 1px solid black;
+        background: #2F303A;
+      }
+      /*.vertu{
+        height: 101px;
+        width: 1170px;
+        margin: 94px 215px 94px;
+        border: 1px solid black;
+      }
+      .direction{
+        height: 386px;
+        width: 1170px;
+        margin: 94px 215px 94px;
+        border: 1px solid black;*/
+      }
+      .team{
+        height: 648px;
+                                            width: 1600px;
+        background: #F5F4FA;
+        /*border: 1px solid black;*/
+      }
+      .footer{
+        height: 252px;
+                                            width: 1600px;
+        background: #2F303A;
+        /*border: 1px solid black;*/
       }
     </style>
   </head>
 
   <body>
-    <header>
+    <header class="header-c">
       <nav>
-        <ul>
+        <ul class="header">
           <li>
             <a lang="en" href="#">WebStudio</a>
           </li>
@@ -40,21 +77,16 @@
     </header>
     <!--heigh=80-->
     <main>
-      <!--HERO 1600/600 #2F303A-->
-      <img
-        src="images/header-rectangle.svg"
-        alt="header-rectangle"
-        width="1600"
-        height="600"
-      />
-
-      <h1>
-        Эффективные решения<br/>для вашего бизнеса
-      </h1>
-      <!--butt-200/50-#2196F3-->
-      <button type="button">Заказать услугу</button>
+      <section class=hero>
+        <!--HERO 1600/600 #2F303A-->
+        <h1>
+          Эффективные решения<br/>для вашего бизнеса
+        </h1>
+        <!--butt-200/50-#2196F3-->
+        <button type="button">Заказать услугу</button>
+      </section>
       <!--Достоинства-->
-      <section>
+      <section class="vertu">
         <h2>--Достоинства--</h2>
         <ul>
           <li>
@@ -87,54 +119,52 @@
           </li>
         </ul>
       </section>
-      <!--Направления деятельности-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <!--<ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>-->
-        <div>
-          <img
-            src="images/box-1.jpg"
-            alt="Программист за работой"
-            width="370"
-            height="294"
-          />
-          <img
-            src="images/box-2.jpg"
-            alt="Дизайнер за работой"
-            width="370"
-            height="294"
-          />
-          <img
-            src="images/box-3.jpg"
-            alt="Дизайнер выбирает колор"
-            width="370"
-            height="294"
-          />
-        </div>
-      </section>
-      <!--Галерея команды-->
-      <section>
-        <img
-          src="images/team-section-rec.svg"
-          alt="header-rectangle"
-          width="1600"
-          height="648"
-        />
 
+      <!--Направления деятельности-->
+      
+      <section class='direction'>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img
+              src="images/box-1.jpg"
+              alt="Программист за работой"
+              width="370"
+              height="294"
+            />
+          <!--  </li>
+          <li>-->
+            <img
+              src="images/box-2.jpg"
+              alt="Дизайнер за работой"
+              width="370"
+              height="294"
+            />
+        <!--  </li>
+          <li>-->
+            <img
+              src="images/box-3.jpg"
+              alt="Дизайнер выбирает колор"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <!--Галерея команды-->
+      
+      <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
             <img src="images/img-1.jpg" alt="Игорь" width="270" height="260" />
-            <p>Игорь Демьяненко</p>
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="images/img-2.jpg" alt="Ольга" width="270" height="260" />
-            <p>Ольга Репина</p>
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -144,30 +174,25 @@
               width="270"
               height="260"
             />
-            <p>Николай Тарасов</p>
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="images/img-4.jpg" alt="Михаил" width="270" height="260" />
-            <p>Михаил Ермаков</p>
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <img
-        src="images/footer-rectangle.svg"
-        alt="footer-rectangle"
-        width="1600"
-        height="252"
-      />
-      <p lang="en">WebStudio</p>
+      <a lang="en">WebStudio</a>
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <p lang="en">info@example.com</p>
         <p>+38 099 111 11 11</p>
       </address>
     </footer>
+  
   </body>
 </html>
